# llama-kit

./: .gitignore  Makefile  README.md  conftest.py  environment.sh  pyproject.toml  pytest.ini  ruff.toml
notebooks/: 01-mmlu-benchmark.ipynb
src/llama_kit/: model.py  tools.py
src/llama_kit/benchmarks/: mmlu.py
tests/benchmarks/: test_llama_mmlu.py
tests/fixtures/: mmlu.py  pytorch.py  workspace.py
tests/unit/: test_config.py  test_generator.py  test_messages.py  test_model.py  test_parameters.py  test_pipeline.py  test_tokenizer.py
tests/unit/benchmarks/: test_mmlu.py
