#-------------------------------------------------------------------------------
# Project: llama-kit
#-------------------------------------------------------------------------------

[project]

name = "llama-kit"
dynamic = ["version"]
requires-python = ">=3.12"

dependencies = [
    "blobfile>=3.0.0",
    "fairscale>=0.4.13",
    "llama-models>=0.0.49",
    "matplotlib>=3.9.2",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "torch>=2.5.1",
]

#-------------------------------------------------------------------------------
# Build System
#-------------------------------------------------------------------------------

[build-system]

requires = ["hatchling"]
build-backend = "hatchling.build"

#-------------------------------------------------------------------------------
# Build Backend
#-------------------------------------------------------------------------------

[tool.hatch.version]

source = "env"
variable = "PY_VERSION"

#-------------------------------------------------------------------------------
# uv
#-------------------------------------------------------------------------------

[tool.uv]

dev-dependencies = [
    "ipykernel>=6.29.5",
    "jupyterlab-myst>=2.4.2",
    "jupyterlab>=4.3.2",
    "matplotlib>=3.9.3",
    "numpy>=2.1.3",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
]
